tests/typechecking/invalid/if_LE_int_int_then-int_else-float.ml
let x= 5 in if x<=4 then 0 else 1.666